samples/_failures_safe/1761294793_ed8531_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e864c282.c: In function ‘main’:
./samples/SAFE/__tmp_e864c282.c:151:18: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  151 |     init_matrix(&mat
      |                  ^~~
      |                  mat2
./samples/SAFE/__tmp_e864c282.c:151:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e864c282.c:151:21: error: expected ‘)’ at end of input
  151 |     init_matrix(&mat
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_e864c282.c:151:5: error: expected declaration or statement at end of input
  151 |     init_matrix(&mat
      |     ^~~~~~~~~~~
